Slider vida jogador

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\ControlaArma.cs" />
      <Compile Include="Assets\Scripts\ControlaCamera.cs" />
      <Compile Include="Assets\Scripts\ControlaInimigo.cs" />
+     <Compile Include="Assets\Scripts\ControlaInterface.cs" />
      <Compile Include="Assets\Scripts\ControlaJogador.cs" />
      <Compile Include="Assets\Scripts\GeradorZumbi.cs" />
      <None Include="Assets\Modelos3D\Personagens\Animacoes\Animacoes.txt" />
