--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,12 +58,16 @@
      <Compile Include="Assets\Scripts\ControlaArma.cs" />
      <Compile Include="Assets\Scripts\ControlaAudio.cs" />
      <Compile Include="Assets\Scripts\ControlaCamera.cs" />
+     <Compile Include="Assets\Scripts\ControlaChefe.cs" />
      <Compile Include="Assets\Scripts\ControlaInimigo.cs" />
      <Compile Include="Assets\Scripts\ControlaInterface.cs" />
      <Compile Include="Assets\Scripts\ControlaJogador.cs" />
+     <Compile Include="Assets\Scripts\GeradorChefe.cs" />
      <Compile Include="Assets\Scripts\GeradorZumbi.cs" />
      <Compile Include="Assets\Scripts\GeradorZumbis.cs" />
+     <Compile Include="Assets\Scripts\ICuravel.cs" />
      <Compile Include="Assets\Scripts\IMatavel.cs" />
+     <Compile Include="Assets\Scripts\KitMedico.cs" />
      <Compile Include="Assets\Scripts\MovimentoJogador.cs" />
      <Compile Include="Assets\Scripts\MovimentoPersonagem.cs" />
      <Compile Include="Assets\Scripts\Status.cs" />
